# Maestro_OS

./: Cargo.toml  LICENSE  README.md
apps/dashboard/: mod.rs
apps/files/: mod.rs
apps/security/: mod.rs
apps/settings/: mod.rs
apps/terminal/: mod.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs  stage0.rs  stage1.rs  stage2.rs
desktop/: Cargo.toml
desktop/src/compositor/: damage.rs  mod.rs  render.rs  window.rs
desktop/src/shell/: mod.rs  notifications.rs  sidebar.rs  taskbar.rs
desktop/src/themes/: mod.rs  quantum_obsidian.toml
desktop/src/widgets/: mod.rs  quantum_wave.rs  security_badge.rs  ternary_switch.rs
docs/: API.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  KONG_INTEGRATION.md  PROJECT_INDEX.md  SECURITY.md
drivers/gpu/: mod.rs
drivers/nvme/: mod.rs
drivers/usb/: mod.rs
drivers/virtio/: mod.rs
hal/: Cargo.toml
hal/src/: lib.rs
hal/src/cpu/: mod.rs
hal/src/display/: mod.rs
hal/src/input/: mod.rs
hal/src/storage/: mod.rs
hal/src/timer/: mod.rs
installer/: build-iso.sh
installer/installer/: mod.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: allocator.rs  mod.rs  security.rs
kernel/src/scheduler/: mod.rs
kernel/src/security/: mod.rs
kernel/src/syscall/: mod.rs
services/authd/: mod.rs
services/hptpd/: mod.rs
services/ledgerd/: mod.rs
services/networkd/: mod.rs
services/terndbd/: mod.rs
tools/: debug.sh  qemu-run.sh
tools/test-runner/: run-integration.sh
